Issue #15247: FileIO now raises an error when given a file descriptor pointing to a directory.